fixed widget getting squished on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -956,7 +956,7 @@ footer li a:hover {
 
 .article_widget {
   width: 75%;
-  height: 75%;
+  height: auto;
   border: 2px solid var(--gray);
 }
 
@@ -974,7 +974,7 @@ footer li a:hover {
 
   .article_widget {
     width: 100%;
-    height: 100%;
+    height: auto;
   }
 }
 
